# dohna-sl-helper

./: .gitignore  README.md  bootstrap_win.py  build-release.py  pyproject.toml
dohna_sl_helper/: __init__.py  automatic.py  ui.py
test/: test_main.py
