[tool.poetry]
name = "dohna-sl-helper"
version = "0.1.0"
description = ""
authors = ["Z4HD <Z4HD@outlook.com>"]

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[tool.poetry.dependencies]
python = "^3.9"
pyautogui = "^0.9.53"
opencv-python = "^4.5.3"
pillow = "^9.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.8.3"
yapf = "^0.31.0"
pyinstaller = "^4.5.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
